# datawarp-v2.1

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_V2.2.md  CLAUDE.md  CLAUDE_MCP_QUICKSTART.md  Dockerfile  QUICKSTART_MONITORING.md  README.md  REFACTORING_SUMMARY_V2.2.md  REFACTORING_SUMMARY_V2.2_FINAL.md  SESSION_12_SUMMARY.md  docker-compose.yml  pyproject.toml  test_enhanced_mcp.py  validate.sh  waiting_time_age_analysis.py  waiting_time_distribution_report.md
config/: agents.yaml  fresh_test.yaml  nhs_landing_pages.md  publications.yaml  publications2.yaml  publications_adhd.yaml  publications_e2e_test.yaml  publications_msa.yaml  publications_test.yaml  publications_test_rtt_discover.yaml  publications_v2.yaml  publications_with_all_urls.yaml  quick_e2e_test.yaml  test_refactoring.yaml  test_rtt_april_only.yaml
docs/: ADHD_TEMPORAL_TESTING.md  BACKFILL_WORKFLOW.md  CANONICAL_FIX_DESIGN.md  DATABASE_STATE_20260110.md  DEPLOYMENT_STARTER_GUIDE.md  E2E_PIPELINE_STATUS.md  E2E_TEST_RESULTS_20260110.md  FILE_LIFECYCLE_ASSESSMENT.md  FISCAL_TESTING_FINDINGS.md  FISCAL_TESTING_PLAN.md  HANDOVER_20260118.md  HANDOVER_LATEST.md  IMPLEMENTATION_TASKS.md  MCP_PIPELINE_DESIGN.md  MCP_PROTOTYPE_RESULTS.md  PHASE1_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  PUBLICATION_VALIDATION_REPORT.md  README.md  REORGANIZATION_PLAN.md  SESSION_5_SUMMARY.md  START_HERE.md  TASKS.md  TASK_MANAGEMENT.md  TESTING_STRATEGY.md  USERGUIDE.md  V2.2_REFACTORING_ISSUES.md  VALIDATION_TEST_FINDINGS.md  scratch.md
manifests/: adhd_aug25_enriched_llm_response.json  adhd_nov25_enriched_v2.yaml  (+11 more)
(+698 files in other folders)
